--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Ziyad's Portfolio</title>
-  <link rel="stylesheet" href="port2.css" />
-  <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="stylesheet" href="theme.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 </head>
