--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <h2>Contact Me</h2>
     <div class="contact-card">
       <div class="contact-info">
-        <p><i class="fas fa-envelope"></i> ziyad.official.a@gmail.com</p>
+<!--         <p><i class="fas fa-envelope"></i> ziyad.official.a@gmail.com</p> -->
        
       </div>
       <form class="contact-form">
